fix(chess): add outline to black pieces for visibility on dark squares

--- a/frontend/src/styles/Board.scss
+++ b/frontend/src/styles/Board.scss
@@ -105,11 +105,20 @@ $label-size: 28px;
   font-size: 2.4rem;
 
   &--white {
-    color: #222;
-    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+    color: #f5f5f5;
+    text-shadow:
+      -1px -1px 0 #333,
+       1px -1px 0 #333,
+      -1px  1px 0 #333,
+       1px  1px 0 #333;
   }
 
   &--black {
-    color: #000;
+    color: #1a1a1a;
+    text-shadow:
+      -1px -1px 0 #e8d5b5,
+       1px -1px 0 #e8d5b5,
+      -1px  1px 0 #e8d5b5,
+       1px  1px 0 #e8d5b5;
   }
 }
